# storygen

./: CMakeLists.txt
common/: Action.cpp  Action.h  CMakeLists.txt  Goal.cpp  Goal.h  Manager.cpp  Manager.h  Object.cpp  Object.h  ObjectRegistry.cpp  ObjectRegistry.h  Role.cpp  Role.h  Target.cpp  Target.h  World.cpp  World.h
res/actions/: kill.json
res/roles/: commoner.json  king.json
res/targets/: owerthrow.json
